fix and optimize on mobile, supporting touch effects

--- a/src/js/App.scss
+++ b/src/js/App.scss
@@ -7,3 +7,12 @@ body {
   justify-content: center;
   margin: 20px 0;
 }
+
+.disable-select {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;           /* Non-prefixed version, currently supported by any browser but < IE9 */
+}
